--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -1,11 +1,10 @@
-.navbar-body{
+.navbar-body {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 4px 2px 4px rgba(0, 0, 0, 0.1); 
- 
+  box-shadow: 4px 2px 4px rgba(0, 0, 0, 0.1);
 }
-.navbar-contents{
+.navbar-contents {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 
@@ -13,21 +12,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 4rem   ; 
+  gap: 4rem;
   font-size: 20px;
- 
-
 }
-.nav-link{
+.nav-link {
   text-decoration: none;
-  color:black;
-  font-family: 'Lato', bold;
+  color: black;
+  font-family: "Lato", bold;
 }
-.navbar-img{
-  margin-top:1.7rem;
-  margin-bottom:1rem;
+.navbar-img {
+  margin-top: 1.7rem;
+  margin-bottom: 1rem;
 
-  margin-right:10rem ;
+  margin-right: 10rem;
   background-repeat: no-repeat;
   height: 60px;
   justify-content: space-between;
