--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,5 +3,10 @@
   padding:0;
   box-sizing:border-box;
   color: black;
-}
+  scroll-behavior: smooth;
 
+}
+html{
+    scroll-behavior: smooth;
+  
+}
