--- a/client/src/Components/Cards/Cards.css
+++ b/client/src/Components/Cards/Cards.css
@@ -2,10 +2,14 @@
 
 * {
   font-family: 'Poppins', sans-serif;
-}
+  scroll-behavior: smooth;
 
+}
+html {
+  scroll-behavior: smooth;
+}
 .cardbody {
-    
+  scroll-behavior: smooth;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
