--- a/client/src/Components/Heading/Heading.css
+++ b/client/src/Components/Heading/Heading.css
@@ -1,24 +1,25 @@
-.PageHeading{
-    height: 100vh;
-    width: 100%;
-    background-color:#131313;
-    display: flex;
-    justify-content: center;
+.PageHeading {
+  height: 100vh;
+  width: 100%;
+  background-color: #131313;
+  display: flex;
+  justify-content: center;
 }
 
-.MainHeading h1{
-    margin-top:5rem;
-    margin-left:4rem;
+.MainHeading h1 {
+  margin-top: 5rem;
+  margin-left: 4rem;
 
-    color: white;
-    font-size: 10rem;
-    font-family: 'lato';
+  color: white;
+  font-size: 10rem;
+  font-family: "lato";
 }
 
-.MainHeading-img img{
-    margin-top:0rem;
+.MainHeading-img img {
+  margin-top: 0rem;
+  margin-right: 240px;
 
-height: 800px;
-width: 100%;
-border-radius: 50px;
+  height: 800px;
+  width: 100%;
+  border-radius: 50px;
 }
