registration page done

--- a/client/src/Components/Sportslanding/Sportslanding.css
+++ b/client/src/Components/Sportslanding/Sportslanding.css
@@ -1,28 +1,57 @@
+/* SportsCard.css */
+
 .sports-landing-container {
-    text-align: center;
-    margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 150px; /* Adjust the margin-top value to leave space for the fixed navbar */
+}
+
+.sports-list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* Updated to 5 columns */
+  grid-template-rows: repeat(4, auto); /* 4 rows */
+  gap: 20px;
+  justify-content: center;
+  text-align: center;
+}
+
+.sports-card {
+  border-radius: 16px;
+  box-shadow: 0 30px 30px -25px rgba(65, 51, 183, 0.25);
+  max-width: 200px; /* Adjust the width as needed */
+  margin: 1rem;
+  background: linear-gradient(45deg, #ff6347, #ffa07a);
+
+  /* Gradient background color */
+  padding: 1.5rem;
+}
+
+.sports-card h3 {
+  font-size: 1.5rem;
+  color: var(--c-void);
+  line-height: 1.25;
+  margin-bottom: 1rem;
+}
+
+.sports-card a {
+  font: inherit;
+  line-height: 1;
+  background: linear-gradient(45deg, #ffa07a, #ff6347);
+  /* Gradient button color */
+  border: 2px solid var(--c-indigo);
+  color: var(--c-indigo);
+  padding: 0.5em 1em;
+  border-radius: 6px;
+  font-weight: 500;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
+  text-decoration: none;
+  &:hover,
+  &:focus {
+    background: linear-gradient(45deg, #ff8c00, #ffd700);
+    color: var(--c-white);
   }
-  
-  .sports-list {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .sports-list li {
-    margin: 10px;
-    width: 150px; /* Adjust the width as needed */
-  }
-  
-  .sports-list li a {
-    text-decoration: none;
-    color: #007bff; /* Link color */
-    font-weight: bold;
-  }
-  
-  .sports-list li a:hover {
-    text-decoration: underline;
-  }
-  
+}
