--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -30,8 +30,9 @@
   margin-top: 1.7rem;
   margin-bottom: 1rem;
   margin-right: 2rem; /* Adjust margin for logo */
-  height: 40px;
-  transform: scale(2); /* Adjust logo scale */
+  margin-left: 2rem;
+  height: 50px; /* Increase logo height */
+  transform: scale(2.5); /* Adjust logo scale */
 }
 
 /* Styles for the dropdown */
@@ -79,4 +80,25 @@
 
 .nav-link.register-button:hover {
   background-color: #2980b9;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333; /* Adjust the background color as needed */
+  padding: 1rem;
+  z-index: 1000; /* Ensure the navbar is above other elements */
+}
+
+.navbar a {
+  color: white; /* Adjust the text color as needed */
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 18px;
+}
+
+.navbar a:hover {
+  color: #ffd700; /* Adjust the hover color as needed */
 }
