--- a/client/src/Components/Sportslanding/Sportslanding.css
+++ b/client/src/Components/Sportslanding/Sportslanding.css
@@ -28,7 +28,7 @@
 }
 
 .sports-card h3 {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: var(--c-void);
   line-height: 1.25;
   margin-bottom: 1rem;
@@ -54,4 +54,10 @@
     background: linear-gradient(45deg, #ff8c00, #ffd700);
     color: var(--c-white);
   }
+}
+.subtle-subtitle {
+  color: #777; /* Adjust the color to your preference */
+  font-style: italic;
+  margin-bottom: 5px;
+  margin-top: -10px;
 }
