--- a/client/src/Components/Sportslanding/Sportslanding.css
+++ b/client/src/Components/Sportslanding/Sportslanding.css
@@ -1,35 +1,41 @@
 /* SportsCard.css */
 
 .sports-landing-container {
+  font-family: "Poppins";
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 150px; /* Adjust the margin-top value to leave space for the fixed navbar */
+  margin-top: 140px; /* Adjust the margin-top value to leave space for the fixed navbar */
 }
 
 .sports-list {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); /* Updated to 5 columns */
-  grid-template-rows: repeat(4, auto); /* 4 rows */
+  grid-template-columns: repeat(4, 1fr); /* Updated to 5 columns */
+  grid-template-rows: repeat(5, auto); /* 4 rows */
   gap: 20px;
   justify-content: center;
   text-align: center;
 }
 
 .sports-card {
-  border-radius: 16px;
-  box-shadow: 0 30px 30px -25px rgba(65, 51, 183, 0.25);
-  max-width: 200px; /* Adjust the width as needed */
+  border-radius: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  max-width: 200px;
   margin: 1rem;
-  background: linear-gradient(45deg, #ff6347, #ffa07a);
-
-  /* Gradient background color */
+  background: linear-gradient(45deg, #3498db, #654797);
   padding: 1.5rem;
+  transition: background-color 0.3s ease;
+}
+
+.sports-card:hover {
+  background: linear-gradient(45deg, #667eea, #764ba2);
 }
 
 .sports-card h3 {
-  font-size: 1rem;
-  color: var(--c-void);
+  font-family: "Poppins";
+  font-size: 0.94rem;
+  color: white; /* Updated text color */
   line-height: 1.25;
   margin-bottom: 1rem;
 }
@@ -37,27 +43,20 @@
 .sports-card a {
   font: inherit;
   line-height: 1;
-  background: linear-gradient(45deg, #ffa07a, #ff6347);
-  /* Gradient button color */
-  border: 2px solid var(--c-indigo);
-  color: var(--c-indigo);
+  color: white; /* Updated text color */
   padding: 0.5em 1em;
   border-radius: 6px;
-  font-weight: 500;
+  font-weight: bold; /* Updated font weight */
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
   gap: 0.5rem;
   text-decoration: none;
-  &:hover,
-  &:focus {
-    background: linear-gradient(45deg, #ff8c00, #ffd700);
-    color: var(--c-white);
-  }
 }
+
 .subtle-subtitle {
-  color: #777; /* Adjust the color to your preference */
-  font-style: italic;
+  font-size: 0.9rem;
+  color: #eee; /* Adjusted color to match the styling */
   margin-bottom: 5px;
   margin-top: -10px;
 }
