--- a/client/src/Components/Sportslanding/Sportslanding.css
+++ b/client/src/Components/Sportslanding/Sportslanding.css
@@ -10,8 +10,7 @@
 
 .sports-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Updated to 5 columns */
-  grid-template-rows: repeat(5, auto); /* 4 rows */
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
   justify-content: center;
   text-align: center;
@@ -59,4 +58,15 @@
   color: #eee; /* Adjusted color to match the styling */
   margin-bottom: 5px;
   margin-top: -10px;
+}
+
+/* Add a media query for smaller screens (e.g., mobile devices) */
+@media (max-width: 768px) {
+  .sports-list {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+
+  .sports-card {
+    max-width: 150px;
+  }
 }
