--- a/client/src/Components/Form/Form.css
+++ b/client/src/Components/Form/Form.css
@@ -14,6 +14,13 @@
   margin-bottom: 20px;
 }
 
+.form-subtitle {
+  text-align: center;
+  font-size: 12px;
+  margin-bottom: 20px;
+  margin-left: 15px;
+}
+
 .form-label {
   margin-bottom: 8px;
   font-size: 16px;
