guest page and reg fees page done

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -46,8 +46,8 @@ position: absolute;
 margin-top:25rem;
 margin-left: 9.5rem;
 border-radius: 20px;
-width: 100px;
-height: 40px;
+width: 6rem;
+height: 2.5rem;
 cursor: pointer;
 }
 .brochure-button:hover {
