--- a/client/src/pages/Registrationfees.css
+++ b/client/src/pages/Registrationfees.css
@@ -1,8 +1,21 @@
 .rf-title {
-  margin-top: 12rem;
-  font-size: 8rem;
-  padding-bottom: 2rem;
+  font-family: "Poppins", sans-serif;
+  margin-top: 8rem;
+  font-size: 4rem;
+  margin-bottom: 2rem;
+  margin-left: 2rem;
   color: white !important;
+}
+
+.rf-div {
+  height: 30rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  background-color: #cd2f72;
 }
 
 .rf-img {
@@ -10,29 +23,17 @@
   width: 90%;
 }
 .rf-img2 {
-    margin-top: 12rem;
-    height:20rem;
-    margin-left: 8rem;
-    width: 20rem;
-  }
+  margin-top: 12rem;
+  height: 20rem;
+  margin-left: 8rem;
+  width: 20rem;
+}
 .rfimg-title {
-    padding-top: 4rem;
+  padding-top: 4rem;
   font-size: 4rem;
   color: white !important;
 }
 
-.rf-div {
-  color: white !important;
-
-  height: 42rem;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-self: center;
-  justify-content: center;
-  padding-bottom: 4rem;
-  background-color: #cd2f72;
-}
 .rf-info {
   color: white !important;
   background-color: #2e7ec0;
@@ -61,15 +62,15 @@
 }
 
 .rf-rules li {
-    color: #fff;
+  color: #fff;
   font-size: 1.5rem;
   padding-bottom: 2.5rem;
 }
 
 .rf-rules span {
-    color: #fff;
-    padding-bottom: 2rem;
-    margin-bottom: 2rem;
+  color: #fff;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
   font-size: 1.5rem;
 }
 
@@ -81,7 +82,7 @@
   margin-bottom: 4rem;
   margin-left: 0;
 }
-.rf-img-holder{
-    display:flex;
-    flex-direction:row;
+.rf-img-holder {
+  display: flex;
+  flex-direction: row;
 }
