about page done

--- a/client/src/pages/About.css
+++ b/client/src/pages/About.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 .about-title {
   font-family: "Poppins", sans-serif;
   margin-top: 8rem;
@@ -23,4 +27,36 @@
   justify-content: center;
   margin-bottom: 2rem;
   background-color: #cd2f72;
+}
+
+.about-content {
+  background: #ededed;
+  margin-top: -2rem;
+}
+
+.img {
+  width: 20rem;
+  height: auto;
+  margin-left: 14rem;
+  margin-top: 10rem;
+}
+
+.right-content {
+  margin-right: 5rem;
+  margin-left: 45rem;
+  margin-top: -25rem;
+}
+
+.btm-content {
+  margin-top: 5rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.low-pg {
+  margin-top: 1rem;
+}
+
+.up-pg {
+  margin-top: 1rem;
 }
