--- a/client/src/pages/Guests.css
+++ b/client/src/pages/Guests.css
@@ -43,7 +43,7 @@
   justify-self: center;
   justify-content: center;
   margin-bottom: 4rem;
-  background-color: #cd2f72;
+  background-color: #edba31;
 }
 .guest-div2 {
   padding: 10px;
