--- a/client/src/pages/Guests.css
+++ b/client/src/pages/Guests.css
@@ -2,6 +2,7 @@
   font-family: "Poppins", sans-serif;
   margin-top: 10rem;
   font-size: 4rem;
+  font-weight: bold;
   margin-bottom: 2rem;
   margin-left: 2rem;
   color: white !important;
@@ -14,25 +15,24 @@
   display: flex;
 }
 
-.guest-img-head{
+.guest-img-head {
   height: 300px;
-  width:520px;
-  border-radius:20px;
+  width: 520px;
+  border-radius: 20px;
   margin: 20px;
-  border:1px solid black;
+  border: 1px solid black;
 }
-.grpimg{
+.grpimg {
   height: 400px;
-  width:660px;
-  border-radius:20px;
+  width: 660px;
+  border-radius: 20px;
   margin: 20px;
-  border:1px solid black;
+  border: 1px solid black;
 }
 .guest-img {
   height: 100%;
   width: 100%;
   object-fit: cover;
-
 }
 
 .guest-div {
@@ -47,7 +47,7 @@
 }
 .guest-div2 {
   padding: 10px;
-  margin:10px;
+  margin: 10px;
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
