--- a/client/src/Components/Heading/Heading.css
+++ b/client/src/Components/Heading/Heading.css
@@ -9,17 +9,15 @@
 .MainHeading h1 {
   margin-top: 5rem;
   margin-left: 4rem;
-
   color: white;
-  font-size: 10rem;
+  font-size: 12rem;
   font-family: "lato";
 }
 
 .MainHeading-img img {
-  margin-top: 0rem;
-  margin-right: 240px;
+  margin-bottom: 10rem;
 
-  height: 800px;
-  width: 100%;
+  height: 860px;
+  width: 500px;
   border-radius: 50px;
 }
