about exe min page done

--- a/client/src/pages/event.css
+++ b/client/src/pages/event.css
@@ -2,6 +2,7 @@
   font-family: "Poppins", sans-serif;
   margin-top: 8rem;
   font-size: 4rem;
+  font-weight: bold;
   margin-bottom: 2rem;
   margin-left: 2rem;
   color: white !important;
@@ -16,4 +17,32 @@
   justify-content: center;
   margin-bottom: 2rem;
   background-color: #cd2f72;
+}
+
+/* event.css */
+.photo-grid {
+  display: grid;
+  grid-template-columns: repeat(
+    4,
+    1fr
+  ); /* Adjust the number of columns as needed */
+  gap: 5px; /* Adjust the gap between columns as needed */
+}
+
+.photo-container {
+  position: relative;
+}
+
+.passport-photo {
+  width: 100%;
+  height: auto;
+  max-width: 100px; /* Adjust the maximum width of each photo as needed */
+  border: 1px solid #ccc; /* Add a border if you'd like */
+  border-radius: 5px; /* Add border radius for rounded corners */
+}
+
+.photo-title {
+  text-align: center;
+  margin-top: 5px; /* Adjust the spacing between the photo and title */
+  font-size: 12px; /* Adjust the font size as needed */
 }
