--- a/client/src/pages/About.css
+++ b/client/src/pages/About.css
@@ -4,22 +4,23 @@
 
 .about-title {
   font-family: "Poppins", sans-serif;
-  margin-top: 8rem;
-  font-size: 4rem;
+  margin-top: 10rem;
+  font-size: 6rem;
+  font-weight: bold;
   margin-bottom: 2rem;
   margin-left: 2rem;
   color: white !important;
 }
-
 .about-subtitle {
   font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin-left: 2rem;
+  margin-right: 4.8rem;
   color: white !important;
 }
 
 .about-div {
-  height: 30rem;
+  height: 46rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -59,4 +60,16 @@
 
 .up-pg {
   margin-top: 1rem;
+}
+
+.about-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.image-container {
+  height: 100%;
+  width: 100%;
+  margin-top: -32px;
 }
