--- a/client/src/Components/Form/Form.css
+++ b/client/src/Components/Form/Form.css
@@ -79,3 +79,11 @@
   color: red;
   margin-left: 4px; /* Adjust the spacing as needed */
 }
+
+.heading {
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 4px;
+  color: red;
+}
